# stufio-framework

./: .copilot-instructions.md  README.md  __init__.py  __version__.py  pyproject.toml
api/: deps.py
api/endpoints/: __init__.py
core/: celery_app.py  config.py  module_registry.py
crud/: __init__.py  mongo_base.py
db/: clickhouse.py  mongo.py  mongo_base.py
docs/: arc.dot  events.md  settings.md
models/: migration.py
schemas/: __init__.py  emails.py  migration.py
stufio/: __init__.py
stufio/api/: admin.py  deps.py  deps_db.py  mongo_utils.py
stufio/api/consumers/: __init__.py  consumer_users.py
stufio/api/dependencies/: __init__.py  mongo.py
stufio/api/endpoints/: __init__.py  admin_metrics.py  admin_settings.py  login.py  (+5 more)
stufio/core/: config.py  module_registry.py  oauth.py  security.py  setting_registry.py  settings.py  stufioapi.py
stufio/crud/: __init__.py  base.py  clickhouse_base.py  crud_setting.py  crud_token.py  crud_user.py  crud_user_group.py  mongo_base.py
stufio/db/: __init__.py  clickhouse.py  clickhouse_base.py  init_db.py  metrics.py  mongo.py  mongo_base.py  redis.py
stufio/docs/: base.dot
stufio/middleware/: __init__.py  framework.py
stufio/models/: migration.py  setting.py  token.py  user.py  user_group.py
stufio/schemas/: __init__.py  base_schema.py  db_metrics.py  migration.py  mongo_response.py  msg.py  oauth.py  setting.py  token.py  user.py  user_group.py
stufio/utilities/: __init__.py  email.py  utils.py
tests/: conftest.py
tests/crud/: test_user.py
tests/utils/: user.py  utils.py
utilities/: email.py
(+12 files in other folders)
